[package]
name = "rs_vul"
version = "0.1.0"
edition = "2021"

[dependencies]
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28.6"
image = "0.24"
nalgebra-glm = "0.3.0"
bytemuck = "1.14.0"
jack = "0.11.4"
rustfft = "6.1.0"
log = "0.4.20"
fast_log = "1.6.12"
ringbuf = "0.3.3"